frontend/test/should_pass/map_004.grg
using map_model_002;

rule assignWrongType {
	a:A;
	
	modify {
		eval {
			a.stringToInt = a.stringToInt.put(a.intValue, a.intValue);
		}
	}
}